<resources>
    <string name="app_name">Weather Application</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="api_key">API key</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_direction">Wind direction</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="ok">OK</string>

    <string name="notification_channel_name">Current temperature</string>
    <string name="notification_title">Current temperature</string>
    <string name="notification_content">Current temperature is: %s°C</string>
</resources>